Fixed Centering Jumpiness caused by Overflowing Slider

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,3 +6,7 @@
     <p>Enrique Krahe</p>
     <p>Graphic designer based in madrid.</p>
 </div>
+<div>
+    <p><a href="">@enrikrahe</a></p>
+    <p><a href="">kikekrahe[at]gmail.com</a></p>
+</div>
