Resize Handle edited

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,10 +16,10 @@
         <p class="text-xs">Clients</p>
         <ul>
             <li>
-                <a href="">DAZZZED Studio</a>
+                <a href="https://www.instagram.com/dazzzzzzzzed/">DAZZZED Studio</a>
             </li>
             <li>
-                <a href="">Willem de Kooning Academy</a>
+                <p>Willem de Kooning Academy</p>
             </li>
         </ul>
         <div>
