Implemented <Image> component instead of <img>

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,6 +21,9 @@
             <li>
                 <p>Willem de Kooning Academy</p>
             </li>
+            <li>
+                <p>Filmhuis Lumen</p>
+            </li>
         </ul>
         <div>
             <button id="size-toggle" class="absolute right-0 bottom-0 hover:opacity-60 transition-opacity cursor-pointer">M</button>
